# CodeGraphContext

./: .gitignore  ARCHITECTURE.md  CGC_E2E_BUG_REPORT.md  README.kor.md  README.md  README.uk.md  README.zh-CN.md  ROADMAP.md  pyproject.toml
.github/workflows/: project-routing.yml
docs/: ARCHITECTURE.md  MCP_TOOLS.md
docs/custom_theme/: main.html
docs/docs/: architecture.md
docs/docs/concepts/: backends.md
docs/docs/guides/: indexing.md
docs/docs/reference/: configuration.md
docs/translations/: README.ja.md  README.kor.md  README.ru-RU.md  README.uk.md  README.zh-CN.md
scratch/: dump_scip.py
src/codegraphcontext/: prompts.py  server.py  tool_definitions.py
src/codegraphcontext/api/: router.py
src/codegraphcontext/cli/: __init__.py  cli_helpers.py  config_manager.py  main.py  setup_wizard.py  visualizer.py
src/codegraphcontext/core/: __init__.py  bundle_registry.py  cgc_bundle.py  cgcignore.py  database_falkordb.py  database_kuzu.py  database_ladybug.py  falkor_worker.py  watcher.py
src/codegraphcontext/tools/: __init__.py  advanced_language_query_tool.py  graph_builder.py  report_generator.py  scip_indexer.py  tree_sitter_parser.py  type_utils.py
src/codegraphcontext/tools/datasources/: __init__.py  cassandra_ingester.py  mysql_ingester.py  redis_ingester.py
src/codegraphcontext/tools/handlers/: analysis_handlers.py  indexing_handlers.py  management_handlers.py  query_handlers.py  watcher_handlers.py
src/codegraphcontext/tools/indexing/: __init__.py  constants.py  discovery.py  embeddings.py  pipeline.py  pre_scan.py  sanitize.py  schema.py  schema_contract.py  scip_pipeline.py  vector_resolver.py
src/codegraphcontext/tools/languages/: c.py  cpp.py  csharp.py  css.py  dart.py  elixir.py  go.py  gradle.py  haskell.py  html.py  java.py  javascript.py  kotlin.py  lua.py  maven.py  mybatis.py  perl.py  php.py  python.py  ruby.py  rust.py  scala.py  swift.py  typescript.py  typescriptjsx.py
src/codegraphcontext/tools/query_tool_languages/: c_toolkit.py  cpp_toolkit.py  csharp_toolkit.py  dart_toolkit.py  go_toolkit.py  haskell_toolkit.py  java_toolkit.py  javascript_toolkit.py  perl_toolkit.py  python_toolkit.py  ruby_toolkit.py  rust_toolkit.py  scala_toolkit.py  swift_toolkit.py  typescript_toolkit.py
src/codegraphcontext/utils/: cypher_readonly.py  debug_log.py  git_utils.py  path_ignore.py  path_sandbox.py  repo_path.py  tool_limits.py  tree_sitter_manager.py  visualize_graph.py
src/codegraphcontext/viz/: server.py
tests/: conftest.py
tests/fixtures/goldens/sample_project/: edges_have.jsonl  metadata.json  nodes_have.jsonl
tests/fixtures/goldens/sample_project_c/: edges_have.jsonl  metadata.json  nodes_have.jsonl
tests/fixtures/goldens/sample_project_cpp/: edges_have.jsonl  metadata.json  nodes_have.jsonl
tests/fixtures/goldens/sample_project_csharp/: edges_have.jsonl  metadata.json  nodes_have.jsonl
tests/fixtures/goldens/sample_project_dart/: edges_have.jsonl  metadata.json  nodes_have.jsonl
tests/fixtures/goldens/sample_project_elixir/: edges_have.jsonl  metadata.json  nodes_have.jsonl
tests/fixtures/goldens/sample_project_go/: edges_have.jsonl  metadata.json  nodes_have.jsonl
tests/fixtures/goldens/sample_project_haskell/: edges_have.jsonl  metadata.json  nodes_have.jsonl
tests/fixtures/goldens/sample_project_java/: edges_have.jsonl  (+2 more)
tests/integration/: test_parser_goldens.py
tests/unit/api/: test_mcp_sse_dependency.py  test_query_router.py
tests/unit/core/: test_database_kuzu_kotlin_metadata.py  test_watcher_polling_observer.py
tests/unit/parsers/: test_python_parser.py
tests/unit/tools/: test_falkordb_kuzu_session_kwargs.py  test_graph_builder_perf_fixes.py  test_graph_writer_transactions.py  test_scip_indexer_c_family.py
tests/unit/utils/: test_cypher_readonly.py  test_path_sandbox_security.py
website/: index.html  package-lock.json  package.json  replace_transparent_hovers.cjs  vercel.json  vite.config.ts
website/api/: bundles.ts  gitlab-zip.ts
website/api/v1/: openapi.json.ts  query.ts
website/src/: App.tsx
website/src/components/: AnimatedCounter.tsx  BundleGeneratorSection.tsx  BundleRegistrySection.tsx  CodeGraphViewer.tsx  ComparisonTable.tsx  CookbookSection.tsx  DemoSection.tsx  ExamplesSection.tsx  FeaturesSection.tsx  Footer.tsx  GlassCard.tsx  HeroSection.tsx  InstallationSection.tsx  LocalUploader.tsx  MagneticButton.tsx  MoveToTop.tsx  Navbar.tsx  PRReviewer.tsx  ParticleBackground.tsx  SectionDivider.tsx  ShowDownloads.tsx  ShowStarGraph.tsx  SocialMentionsTimeline.tsx  TestimonialSection.tsx  ThemeToggle.tsx  TypewriterText.tsx
website/src/pages/: Contributing.css  Contributing.tsx  Explore.tsx  Index.tsx
(+73 files in other folders)
