[project]
name = "codegraphcontext"
version = "0.4.15"
description = "An MCP server that indexes local code into a graph database to provide context to AI assistants."
authors = [{ name = "Shashank Shekhar Singh", email = "shashankshekharsingh1205@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "neo4j>=5.15.0",
    "watchdog>=3.0.0",
    "stdlibs>=2023.11.18",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "inquirerpy>=0.3.4",
    "python-dotenv>=1.0.0",
    "tree-sitter>=0.21.0,<0.26.0; python_version != '3.13'",
    "tree-sitter-language-pack>=0.6.0,<1.0.0; python_version != '3.13'",
    "tree-sitter-c-sharp>=0.21.0; python_version != '3.13'",
    "pyyaml",
    "nbformat",
    "nbconvert>=7.16.6",
    "pathspec>=0.12.1",
    # ------------------------------------------------------------------
    # Backend driver pins (see issue #1035)
    #
    # FalkorDB and its embedded sibling ``falkordblite`` co-evolve with
    # ``redis-py``: the most recent ``falkordblite`` releases (>= 0.10) and
    # ``falkordb`` releases (>= 1.6) require ``redis>=7.1`` / ``redis>=7.4``,
    # but redis-py >= 6 breaks the Unix-socket path FalkorDB Lite uses
    # (``UnixDomainSocketConnection`` lacks a ``host`` attribute, which the
    # new maintenance-notifications handshake dereferences unconditionally).
    #
    # Until upstream resolves this we pin a known-good triple:
    #   * redis-py 5.x           — last series that keeps UDS path working
    #   * falkordblite < 0.10    — last series compatible with redis>=4.5
    #   * falkordb < 1.6         — last series compatible with redis<7.1
    #
    # ``redis`` itself is now declared explicitly so a fresh resolver run
    # (``uvx``, ``pipx install --force``, etc.) cannot silently pick up
    # redis-py 6/7/8 again and reintroduce the bug.
    # ------------------------------------------------------------------
    "redis>=5,<6",
    "falkordb>=1.0,<1.6",
    "falkordblite>=0.7,<0.10; sys_platform != 'win32' and python_version >= '3.12'",
    "requests>=2.28.0",
    "protobuf>=3.20,<3.21",
    "kuzu; sys_platform == 'win32' or (sys_platform != 'win32' and python_version >= '3.10')",
    "ladybug; sys_platform == 'win32' or (sys_platform != 'win32' and python_version >= '3.10')",
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0"
]

[project.optional-dependencies]
parsing = [
    "tree-sitter>=0.21.0,<0.26.0; python_version != '3.13'",
    "tree-sitter-language-pack>=0.6.0,<1.0.0; python_version != '3.13'",
    "tree-sitter-c-sharp>=0.21.0; python_version != '3.13'",
]
# Named backend extras let users (and CI) opt into a single, tested driver
# triple instead of inheriting whatever the default install pulls. They
# install the same ranges as the defaults today; the long-term plan
# (tracked separately) is to make the defaults lean and require an extra.
falkordb-embedded = [
    "falkordblite>=0.7,<0.10; sys_platform != 'win32' and python_version >= '3.12'",
    "falkordb>=1.0,<1.6",
    "redis>=5,<6",
]
falkordb-remote = [
    "falkordb>=1.0,<1.6",
    "redis>=5,<6",
]
kuzu = [
    "kuzu; sys_platform == 'win32' or (sys_platform != 'win32' and python_version >= '3.10')",
]
ladybug = [
    "ladybug; sys_platform == 'win32' or (sys_platform != 'win32' and python_version >= '3.10')",
]
neo4j = [
    "neo4j>=5.15.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.11.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
"Homepage" = "https://github.com/Shashankss1205/CodeGraphContext"
"Bug Tracker" = "https://github.com/Shashankss1205/CodeGraphContext/issues"

[project.scripts]
cgc = "codegraphcontext.cli.main:app"
codegraphcontext = "codegraphcontext.cli.main:app"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
codegraphcontext = ["viz/dist/**/*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["codegraphcontext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["tests/fixtures", "tests/e2e/sample_projects", "venv", ".git", "__pycache__"]
markers = [
    "integration: mark a test as an integration test.",
    "e2e: mark a test as an end-to-end test.",
    "slow: mark test as slow."
]
